# prototype_cache

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  pyproject.toml
.cursor/rules/: docs-spec-quality.mdc  project-context.mdc
.github/instructions/: docs-spec-quality.instructions.md  project-context.instructions.md
.github/workflows/: ci.yml
deploy/: Dockerfile
deploy/compose/: README.md  docker-compose.garage.yml  docker-compose.postgres.yml  docker-compose.yml  garage-init.sh
deploy/compose/garage/: garage.toml
deploy/swarm/: README.md
docs/: IMPLEMENTATION_NOTES.md  NOTES.md  PROJECT_ARCHITECTURE.md  WORKPLAN.md
docs/_archive/: README.md
docs/guides/: README.md  bulk-loader.md
docs/services/: fetcher-service.md
docs/spec/: 00A_SCENARIOS.md  00A_USE_CASES_AND_SCENARIOS.md  00B_GLOSSARY_AND_ACRONYMS.md  00_DISCOVERY_QA.md  01_SCOPE.md  02_REQUIREMENTS.md  03_ARCHITECTURE.md  03_ARCHITECTURE_AND_DECISIONS.md  04_OPERATIONS.md  04_OPERATIONS_AND_READINESS.md  05_BACKLOG_AND_OPEN_QUESTIONS.md  06_OSS_SURVEY.md  07_FETCHER_SERVICE.md  A_OSS_SURVEY.md  README.md  ZZ_notes_to_reintegrate.md
docs/spec/_archive/: 00A_USE_CASES_AND_SCENARIOS.md  00_DISCOVERY_QA.md  README.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
services/asset-registry/: README.md
services/asset-store/: README.md
services/fetcher-service/: README.md
services/storage-guard/: README.md
src/asset_store_core/: __init__.py  capabilities.py  compat.py  errors.py  guard.py  ids.py  models.py  object_store.py  paths.py  pg_registry.py  registry.py  registry_base.py  s3_object_store.py  service_identity.py  service_policy.py  storage.py
src/asset_store_core/api/: __init__.py  app.py  errors.py  metrics.py  observability.py  (+1 more)
src/fetcher_service/: __init__.py  app.py  client.py  config.py  errors.py  fetcher.py  normalize.py  rules.py  service.py
tests/: test_api.py  test_app_factory.py  test_audit.py  test_bulk_loader.py  test_bulk_loader_garage.py  test_capabilities.py  test_data_plane.py  test_fetcher_service.py  test_guard.py  test_lifecycle.py  test_migrations.py  test_object_store.py  test_observability.py  test_paths.py  test_pg_registry.py  test_quota.py  test_quota_api.py  test_quota_metrics.py  test_registry.py  test_s3_garage_integration.py  test_s3_multipart.py  test_service_identity.py  test_service_policy.py  test_storage.py
tools/bulk-loader/: README.md  bulk_loader.py
tools/worker-sim/: README.md
