[project]
name = "asset-store-prototype"
version = "0.1.0"
description = "Prototype asset-store core for immutable assets, aliases, and scoped capabilities."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.8"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
