[project]
name = "asset-store-prototype"
version = "0.1.0"
description = "Prototype asset-store core for immutable assets, aliases, and scoped capabilities."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "prometheus-client>=0.20"]

[dependency-groups]
dev = ["ruff>=0.4", "mypy>=1.8", "pytest>=8.0", "pre-commit>=3.7", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
