[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asset-store-prototype"
version = "0.1.0"
description = "Prototype asset-store core for immutable assets, aliases, and scoped capabilities."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "prometheus-client>=0.20", "uvicorn>=0.30"]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
pg = ["psycopg[binary]>=3.1", "alembic>=1.13"]

[tool.hatch.build.targets.wheel]
packages = ["src/asset_store_core"]

[dependency-groups]
dev = ["ruff>=0.4", "mypy>=1.8", "pytest>=8.0", "pre-commit>=3.7", "httpx>=0.27", "boto3>=1.34", "psycopg[binary]>=3.1", "alembic>=1.13", "click>=8.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "tools/bulk-loader/bulk_loader.py"]
mypy_path = ["src", "tools/bulk-loader"]

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true
